--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_config: ^2.0.2
   flutter_zoom_drawer: ^3.2.0
   google_fonts: ^6.2.1
+  iconly: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
