--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_zoom_drawer: ^3.2.0
   google_fonts: ^6.2.1
   iconly: ^1.0.1
+  kf_drawer: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
